--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>Boilerplate app build upon Ural Client Framework</h1>
+    <div id="_layout"></div>
     <script data-main="ural/main" src="ural/require.js"></script>
 </body>
 </html>
