--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <title>Ural Client App</title>
     <!--
-    <script src="ural/Libs/jquery.js" type="text/javascript"></script>
+    <script src="Ural/Libs/jquery.js" type="text/javascript"></script>
     <script src="Libs/jquery.ui.js" type="text/javascript"></script>
     <script src="Libs/jquery.tmpl.js" type="text/javascript"></script>
     -->
@@ -12,6 +12,6 @@
 <body>
     <h1>Boilerplate app build upon Ural Client Framework</h1>
     <div id="_layout"></div>
-    <script data-main="ural/main" src="ural/require.js"></script>
+    <script data-main="ural/main" src="Ural/require.js"></script>
 </body>
 </html>
