--- a/Test/data-spec-runner.html
+++ b/Test/data-spec-runner.html
@@ -18,6 +18,7 @@
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="specs/helper.spec.js"></script>
+    <script type="text/javascript" src="specs/filter.spec.js"></script>
     <script type="text/javascript" src="specs/data.spec.js"></script>
 
 
