data.spec _getStatement

--- a/Test/data-spec-runner.html
+++ b/Test/data-spec-runner.html
@@ -25,7 +25,7 @@
     <script type="text/javascript">
         (function() {
             require.config({
-                baseUrl: '../'
+                baseUrl: '../..'
             });
             var jasmineEnv = jasmine.getEnv();
             jasmineEnv.updateInterval = 1000;
