--- a/Test/productController-spec-runner.html
+++ b/Test/productController-spec-runner.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="../Ural/Libs/jquery.js"></script>
     <script type="text/javascript" src="../Ural/Libs/async.js"></script>
     <script type="text/javascript" src="../Ural/Libs/knockout.js"></script>
+    <script type="text/javascript" src="../Ural/Libs/knockout.mapping.js"></script>
 
     <!--<script type="text/javascript" src="Libs/jquery.tmpl.js"></script>-->
     <!-- include spec files here... -->
@@ -62,7 +63,7 @@
 
 </head>
 <body>
-<div>
+<div style="display: none;">
     <div id="_layout">test</div>
 </div>
 </body>
