itemVM cancel edit

--- a/Test/productController-spec-runner.html
+++ b/Test/productController-spec-runner.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="../Ural/Libs/async.js"></script>
     <script type="text/javascript" src="../Ural/Libs/knockout.js"></script>
     <script type="text/javascript" src="../Ural/Libs/knockout.mapping.js"></script>
+    <script type="text/javascript" src="../Ural/Libs/knockout.extensions.js"></script>
 
     <!--<script type="text/javascript" src="Libs/jquery.tmpl.js"></script>-->
     <!-- include spec files here... -->
