odata provider update

--- a/Test/data-spec-runner.html
+++ b/Test/data-spec-runner.html
@@ -30,9 +30,9 @@
             });
 
             require(["./Test/specs/odata.data.spec"
-                ,"./Test/specs/odata.filter.spec"
-                ,"./Test/specs/webSql.filter.spec"
-                , "./Test/specs/webSql.data.spec"
+                //,"./Test/specs/odata.filter.spec"
+                //,"./Test/specs/webSql.filter.spec"
+                //, "./Test/specs/webSql.data.spec"
             ], function(){
                 var jasmineEnv = jasmine.getEnv();
                 jasmineEnv.updateInterval = 1000;
