--- a/Test/all-spec-runner.html
+++ b/Test/all-spec-runner.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="../Ural/require.js"></script>
     <script type="text/javascript" src="../Ural/utils.js"></script>
     <script type="text/javascript" src="../Ural/Libs/jquery.js"></script>
+    <script type="text/javascript" src="../Ural/Libs/jquery.ui.js"></script>
     <script type="text/javascript" src="../Ural/Libs/async.js"></script>
     <script type="text/javascript" src="../Ural/Libs/knockout.js"></script>
     <script type="text/javascript" src="../Ural/Libs/knockout.mapping.js"></script>
