tests without exceptions

--- a/Test/data-spec-runner.html
+++ b/Test/data-spec-runner.html
@@ -14,7 +14,11 @@
     <script type="text/javascript" src="../Ural/require.js"></script>
     <script type="text/javascript" src="../Ural/utils.js"></script>
     <script type="text/javascript" src="../Ural/Libs/jquery.js"></script>
+    <script type="text/javascript" src="../Ural/Libs/jquery.ui.js"></script>
     <script type="text/javascript" src="../Ural/Libs/async.js"></script>
+    <script type="text/javascript" src="../Ural/Libs/knockout.js"></script>
+    <script type="text/javascript" src="../Ural/Libs/knockout.mapping.js"></script>
+
 
     <!-- include spec files here... -->
     <!--
