--- a/main.html
+++ b/main.html
@@ -3,15 +3,39 @@
 <html>
 <head>
     <title>Ural Client App</title>
-    <!--
-    <script src="Ural/Libs/jquery.js" type="text/javascript"></script>
-    <script src="Libs/jquery.ui.js" type="text/javascript"></script>
-    <script src="Libs/jquery.tmpl.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" type="text/css" href="Ural/Libs/css/jquery.ui.css">
+    <link rel="stylesheet" type="text/css" href="Ural/Libs/css/jquery.tagit.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.min.css">
+
+    <!--<script type="text/javascript" src="Ural/require.js"></script>
+    <script type="text/javascript" src="Ural/utils.js"></script>
+    <script type="text/javascript" src="Ural/Libs/jquery.js"></script>
+    <script type="text/javascript" src="Ural/Libs/jquery.ui.js"></script>
+    <script type="text/javascript" src="Ural/Libs/async.js"></script>
+    <script type="text/javascript" src="Ural/Libs/knockout.js"></script>
+    <script type="text/javascript" src="Ural/Libs/knockout.mapping.js"></script>
+
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     -->
+
 </head>
 <body>
-    <h1>Boilerplate app build upon Ural Client Framework</h1>
+    <div class="navbar">
+        <a class="brand" href="#">
+            Boilerplate app build upon Ural Client Framework
+        </a>
+        <div class="navbar-inner">
+            <div class="container">
+                <ul class="nav">
+                    <li><a href="#product/index">Products</a></li>
+                    <li><a href="#producer/index">Producers</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div id="_layout"></div>
-    <script data-main="ural/main" src="Ural/require.js"></script>
+    <script data-main="Ural/main" src="Ural/require.js"></script>
 </body>
 </html>
