--- a/Test/productController-spec-runner.html
+++ b/Test/productController-spec-runner.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" type="text/css" href="/Ural/Libs/css/jquery.ui.css">
     <link rel="stylesheet" type="text/css" href="/Ural/Libs/css/jquery.tagit.css">
 
-
     <!-- global lib includes -->
     <script type="text/javascript" src="../Ural/require.js"></script>
     <script type="text/javascript" src="../Ural/utils.js"></script>
@@ -24,7 +23,7 @@
     <script type="text/javascript" src="../Ural/Libs/async.js"></script>
     <script type="text/javascript" src="../Ural/Libs/knockout.js"></script>
     <script type="text/javascript" src="../Ural/Libs/knockout.mapping.js"></script>
-    <script type="text/javascript" src="../Ural/Libs/knockout.extensions.js"></script>
+    <!-- <script type="text/javascript" src="../Ural/Libs/knockout.extensions.js"></script> -->
 
     <!--<script type="text/javascript" src="Libs/jquery.tmpl.js"></script>-->
     <!-- include spec files here... -->
