boilerplate edit form

--- a/main.html
+++ b/main.html
@@ -4,10 +4,13 @@
 <head>
     <title>Ural Client App</title>
 
-    <link rel="stylesheet" type="text/css" href="Ural/Libs/css/jquery.ui.css">
     <link rel="stylesheet" type="text/css" href="Ural/Libs/css/jquery.tagit.css">
+    <link rel="stylesheet" type="text/css" href="Ural/Libs/css/jquery.ui.css">
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/rebase.css">
+
 
     <!--<script type="text/javascript" src="Ural/require.js"></script>
     <script type="text/javascript" src="Ural/utils.js"></script>
